plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.aphinity'
version = '1.2'
description = 'The server back end for the ApHinity Analytics web application.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-ses:3.3.0'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter'
	implementation 'com.digitalsanctuary:ds-spring-cf-turnstile:2.0.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.springframework.boot:spring-boot-starter-jsonb'
	implementation 'org.apache.poi:poi-ooxml:5.4.0'
	implementation 'dev.matrixlab.webp4j:webp4j-core:2.1.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'org.postgresql:postgresql:42.7.8'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootTestRun') {
	def jwtSecret = System.getenv('JWT_SECRET')
	if (jwtSecret == null || jwtSecret.getBytes('UTF-8').length < 32) {
		environment 'JWT_SECRET', 'bootTestRunFallbackSecretValueAtLeast32Bytes' // this is a test run, having a hardcoded secret is fine as this will never be published.
	}
	systemProperty 'server.port', '0'
}
